Restore Java 8 compatibility in user data service